<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".RegistrationActivity"
android:background="@drawable/registeration_bg"
xmlns:android="http://schemas.android.com/apk/res/android">

<ImageView
    android:id="@+id/register_icon"
    android:layout_width="120dp"
    android:layout_height="120dp"

    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    app:srcCompat="@drawable/icon" />

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_below="@+id/register_icon"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:text="@string/app_name"
    android:textColor="#ffffff"
    android:textSize="24sp" />

<TextView
    android:id="@+id/textView0"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/textView"
    android:layout_centerHorizontal="true"
    android:text="@string/rtitle"
    android:textColor="#ffffff"
    android:textSize="22sp" />

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="216dp"
    android:layout_marginHorizontal="8dp"
    android:text="@string/fname"
    android:textColor="#ffffff"
    android:textSize="20sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="253dp"
        android:ems="11"
        android:inputType="textCapWords" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="244dp"
    android:layout_marginHorizontal="8dp"
    android:text="@string/email"
    android:textColor="#ffffff"
    android:textSize="20sp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="204dp"
        android:ems="11"
        android:inputType="textEmailAddress" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="163dp"
    android:layout_marginHorizontal="8dp"
    android:text="@string/rolln"
    android:textColor="#ffffff"
    android:textSize="20sp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="122dp"
        android:ems="11"
        android:inputType="textCapCharacters" />

<!--<Button-->
<!--android:id="@+id/button1"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_alignParentEnd="true"-->
<!--android:layout_alignParentRight="true"-->
<!--android:layout_alignParentBottom="true"-->
<!--android:layout_marginStart="8dp"-->
<!--android:layout_marginTop="284dp"-->
<!--android:layout_marginEnd="8dp"-->
<!--android:text="@string/submitb"-->
<!--app:layout_constraintEnd_toEndOf="parent"-->
<!--app:layout_constraintStart_toStartOf="parent"-->
<!--app:layout_constraintTop_toBottomOf="@+id/textView0" />-->
<android.support.v7.widget.CardView
    android:layout_width="300dp"
    android:layout_height="50dp"
    android:layout_alignParentBottom="true"

    android:layout_centerHorizontal="true"
    android:layout_marginBottom="44dp"
    app:cardBackgroundColor="@color/colorPrimaryDark"
    app:cardCornerRadius="25dp"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:layout_centerInParent="true"
            android:text="@string/submitb"
            android:textColor="#ffffff" />
    </RelativeLayout>

</android.support.v7.widget.CardView>


</RelativeLayout>
